Updated code from Codespaces

--- a/Bharat Food/Front end/index.html
+++ b/Bharat Food/Front end/index.html
@@ -35,11 +35,11 @@
 
           <ul class="nav-list d-flex">
             <a href="">Home</a>
-            <a href="../pages/about.html">About</a>
+            <a href="../Front end/pages/about.html">About</a>
             <a href="">Shop</a>
             <a href="">Food</a>
             <a href="">Recipes</a>
-            <a href="../pages/contact.html">Contact</a>
+            <a href="../Front end/pages/contact.html">Contact</a>
             <span class="close d-flex"><i class="bx bx-x"></i></span>
           </ul>
 
@@ -352,7 +352,7 @@
       <div class="row container">
         <div class="col">
           <div class="logo d-flex">
-            <img src="./images/logo.png" alt="logo" />
+            <img src="../Front end/images/BHARAT_FOOD LOGO.png" alt="logo" />
           </div>
           <p>
             Retail food delivery is a courier service in which a restaurant,
@@ -369,7 +369,7 @@
         <div class="col">
           <div>
             <h4>Company</h4>
-            <a href="">About Us</a>
+            <a href="../Front end/pages/about.html">About Us</a>
             <a href="">Blog</a>
             <a href="">All Products</a>
             <a href="">Locations Map</a>
@@ -399,8 +399,8 @@
     </footer>
     <div class="footer-bottom">
       <div class="row container d-flex">
-        <p>Copyright © 2021 Pixency</p>
-        <p>Created by Asha</p>
+        <p>Copyright © 2025 Bharat Food</p>
+        <p>""</p>
       </div>
     </div>
 
