--- a/Bharat Food/Front end/pages/about.html
+++ b/Bharat Food/Front end/pages/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us - Bharat Food</title>
     <!-- Link to your CSS file -->
-    <link rel="stylesheet" href="../lc26-food-delivery-website-master/css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <!-- Google Fonts already imported via CSS -->
   </head>
   <body class="about-page">
@@ -13,12 +13,12 @@
     <header class="header">
         <nav class="navbar">
           <div class="row d-flex container">
-            <a href="../lc26-food-delivery-website-master/index.html" class="logo d-flex">
-              <img src="../lc26-food-delivery-website-master/images/BHARAT_FOOD LOGO.png" alt="Bharat Food Logo" />
+            <a href="../index.html" class="logo d-flex">
+              <img src="../images/BHARAT_FOOD LOGO.png" alt="Bharat Food Logo" />
             </a>
       
             <ul class="nav-list d-flex">
-              <a href="../lc26-food-delivery-website-master/index.html">Home</a>
+              <a href="../index.html">Home</a>
               <a href="about.html" class="active">About</a>
               <a href="recipes.html">Recipes</a>
               <a href="contact.html">Contact</a>
@@ -35,7 +35,7 @@
           <!-- Left Column: About Image -->
           <div class="col">
             <!-- Replace with your actual about image -->
-            <img src="../lc26-food-delivery-website-master/images/BH Food About.png" alt="About Bharat Food" />
+            <img src="../images/BH Food About.png" alt="About Bharat Food" />
           </div>
           <!-- Right Column: About Content -->
           <div class="col">
@@ -76,7 +76,7 @@
           <!-- Footer Column 1 -->
           <div class="col">
             <div class="logo">
-              <img src="../lc26-food-delivery-website-master/images/BHARAT_FOOD LOGO.png" alt="Bharat Food Logo" />
+              <img src="../images/BHARAT_FOOD LOGO.png" alt="Bharat Food Logo" />
             </div>
             <p>
               Experience the authentic flavors of India with Bharat Food.
@@ -91,7 +91,7 @@
           <div class="col">
             <div>
               <h4>Quick Links</h4>
-              <a href="../lc26-food-delivery-website-master/index.html">Home</a>
+              <a href="../index.html">Home</a>
               <a href="about.html">About</a>
               <a href="recipes.html">Recipes</a>
               <a href="contact.html">Contact</a>
