--- a/Bharat Food/Front end/pages/contact.html
+++ b/Bharat Food/Front end/pages/contact.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us - Bharat Food</title>
     <!-- Link to your CSS file -->
-    <link rel="stylesheet" href="../lc26-food-delivery-website-master/css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
     <!-- ========== Header & Navigation ========== -->
     <header class="header">
       <nav class="navbar">
         <div class="row d-flex container">
-          <a href="../lc26-food-delivery-website-master/index.html" class="logo d-flex">
-            <img src="../lc26-food-delivery-website-master/images/BHARAT_FOOD LOGO.png" alt="Bharat Food Logo" />
+          <a href="../index.html" class="logo d-flex">
+            <img src="../images/BHARAT_FOOD LOGO.png" alt="Bharat Food Logo" />
           </a>
 
           <ul class="nav-list d-flex">
-            <a href="../lc26-food-delivery-website-master/index.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="about.html">About</a>
             <a href="recipes.html">Recipes</a>
             <a href="contact.html" class="active">Contact</a>
@@ -75,7 +75,7 @@
           <!-- Footer Column 1 -->
           <div class="col">
             <div class="logo">
-              <img src="../lc26-food-delivery-website-master/images/BHARAT_FOOD LOGO.png" alt="Bharat Food Logo" />
+              <img src="../images/BHARAT_FOOD LOGO.png" alt="Bharat Food Logo" />
             </div>
             <p>Experience the authentic flavors of India with Bharat Food.</p>
             <div class="icons">
@@ -88,7 +88,7 @@
           <div class="col">
             <div>
               <h4>Quick Links</h4>
-              <a href="../lc26-food-delivery-website-master/index.html">Home</a>
+              <a href="../index.html">Home</a>
               <a href="about.html">About</a>
               <a href="recipes.html">Recipes</a>
               <a href="contact.html">Contact</a>
