--- a/Bharat Food/Front end/index.html
+++ b/Bharat Food/Front end/index.html
@@ -34,12 +34,11 @@
           </a>
 
           <ul class="nav-list d-flex">
-            <a href="">Home</a>
-            <a href="../Front end/pages/about.html">About</a>
-            <a href="">Shop</a>
-            <a href="">Food</a>
-            <a href="">Recipes</a>
-            <a href="../Front end/pages/contact.html">Contact</a>
+            <a href="./index.html">Home</a>
+            <a href="./pages/about.html">About</a>
+            <a href="./pages/explore_food.html" class="active">Food</a>
+            <a href="./pages/recepies.html">Recipes</a>
+            <a href="./pages/contact.html">Contact</a>
             <span class="close d-flex"><i class="bx bx-x"></i></span>
           </ul>
 
@@ -81,7 +80,7 @@
               Food that is delivered at the right time. The trendy food delivery
               partner. Good food is what we deliver. Your hunger companion.
             </p>
-            <a href="" class="btn">Explore Food</a>
+            <a href="./pages/explore_food.html" class="btn">Explore Food</a>
           </div>
           <div class="col">
             <img src="./images/delivery-guy.svg" alt="" />
@@ -119,7 +118,100 @@
       </div>
     </header>
 
-    <!--=============== Services ===============-->
+    
+    
+
+    <!--=============== Explore Food Section ===============-->
+  <section class="services explore">
+    <div class="container">
+      <!-- Section Heading -->
+      <h2 style="font-size: 4.5rem; font-weight: 600; margin-bottom: 2rem; text-align: center;">
+        Explore Foods
+      </h2>
+      <!-- Products Grid -->
+      <div class="row">
+        <!-- Example item: add data-category attributes for filtering -->
+        <div class="col" data-category="vegetarian">
+          <div class="card">
+            <div class="image">
+              <img src="./images/Food_Images/Pasta.jpeg" alt="Creamy Pasta" />
+            </div>
+            <h3 style="font-size: 2rem; margin: 1rem 0;">Creamy Pasta</h3>
+            <p class="price" style="font-size: 2rem; margin-bottom: 1.5rem;">
+              ₹250
+            </p>
+            <a href="https://forms.gle/zCGrUUGbBZMJNLX19" target="_blank" class="btn">Order Now</a>
+          </div>
+        </div>
+
+        <div class="col" data-category="vegetarian">
+          <div class="card">
+            <div class="image">
+              <img src="./images/Food_Images/sandwich.webp" alt="Grilled Sandwich" />
+            </div>
+            <h3 style="font-size: 2rem; margin: 1rem 0;">Grilled Sandwich</h3>
+            <p class="price" style="font-size: 2rem; margin-bottom: 1.5rem;">
+              ₹150
+            </p>
+            <a href="https://forms.gle/zCGrUUGbBZMJNLX19" target="_blank" class="btn">Order Now</a>
+
+          </div>
+        </div>
+
+        <div class="col" data-category="non-vegetarian">
+          <div class="card">
+            <div class="image">
+              <img src="./images/Food_Images/Biryani.jpg" alt="Chicken Biryani" />
+            </div>
+            <h3 style="font-size: 2rem; margin: 1rem 0;">Chicken Biryani</h3>
+            <p class="price" style="font-size: 2rem; margin-bottom: 1.5rem;">
+              ₹300
+            </p>
+            <a href="https://forms.gle/zCGrUUGbBZMJNLX19" target="_blank" class="btn">Order Now</a>
+          </div>
+        </div>
+
+        <div class="col" data-category="vegetarian">
+          <div class="card">
+            <div class="image">
+              <img src="./images/Food_Images/veg biryani.jpg" alt="Veg Biryani" />
+            </div>
+            <h3 style="font-size: 2rem; margin: 1rem 0;">Veg Biryani</h3>
+            <p class="price" style="font-size: 2rem; margin-bottom: 1.5rem;">
+              ₹200
+            </p>
+            <a href="https://forms.gle/zCGrUUGbBZMJNLX19" target="_blank" class="btn">Order Now</a>
+          </div>
+        </div>
+
+        <div class="col" data-category="dessert">
+          <div class="card">
+            <div class="image">
+              <img src="./images/Food_Images/Cake.jpeg" alt="Chocolate Cake" />
+            </div>
+            <h3 style="font-size: 2rem; margin: 1rem 0;">Chocolate Cake</h3>
+            <p class="price" style="font-size: 2rem; margin-bottom: 1.5rem;">
+              ₹300
+            </p>
+            <a href="https://forms.gle/zCGrUUGbBZMJNLX19" target="_blank" class="btn">Order Now</a>
+          </div>
+        </div>
+
+        <!-- Add more items similarly, each with appropriate data-category -->
+      </div> <!-- /.row -->
+
+      <!-- Optional: Pagination controls -->
+      <!--
+      <div class="pagination">
+        <span class="page active">1</span>
+        <span class="page">2</span>
+        <span class="page">3</span>
+      </div>
+      -->
+    </div> <!-- /.container -->
+  </section>
+
+  <!--=============== Services ===============-->
     <section class="section services" id="services">
       <div class="row container">
         <div class="col">
@@ -162,7 +254,7 @@
       </div>
     </section>
 
-    <!--=============== About ===============-->
+  <!--=============== About ===============-->
     <section class="section about" id="about">
       <div class="row container">
         <div class="col">
@@ -200,153 +292,130 @@
       </div>
     </section>
 
-    <!--=============== Recipes ===============-->
-    <section class="section recipes" id="recipes">
-      <h2>Try Our Special Recipes</h2>
-      <div class="row container">
-        <div class="filters d-flex">
-          <span data-filter="All Product">See All Product</span>
-          <span data-filter="Fast Food">Fast Food</span>
-          <span data-filter="Rice Menu">Rice Menu</span>
-          <span data-filter="Desserts">Desserts</span>
-          <span data-filter="Coffee">Coffee</span>
-          <span data-filter="Pizza">Pizza</span>
+
+
+
+    <!--
+=============== Recipes ===============
+<section class="section recipes" id="recipes">
+  <h2>Try Our Special Recipes</h2>
+  <div class="row container">
+    <div class="filters d-flex">
+      <span data-filter="All Product">See All Product</span>
+      <span data-filter="Fast Food">Fast Food</span>
+      <span data-filter="Rice Menu">Rice Menu</span>
+      <span data-filter="Desserts">Desserts</span>
+      <span data-filter="Coffee">Coffee</span>
+      <span data-filter="Pizza">Pizza</span>
+    </div>
+    <div class="products">
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper" id="products-wrapper">
+         Slides would be dynamically inserted here 
         </div>
-        <div class="products">
-          <div class="swiper mySwiper">
-            <div class="swiper-wrapper" id="products-wrapper">
-              <!-- <div class="swiper-slide">
-                <div class="card">
-                  <div class="image"><img src="./images/meat-2.svg" alt=""></div>
-                  <div class="rating">
-                  <span><i class="bx bxs-star"></i></span>
-                  <span><i class="bx bxs-star"></i></span>
-                  <span><i class="bx bxs-star"></i></span>
-                  <span><i class="bx bxs-star"></i></span>
-                  <span><i class="bx bxs-star"></i></span>
-                  </div>
-                  <h4>Crispy Fried Chicken</h4>
-                  <div class="price">
-                    <span>Price</span><span class="color">$13.00</span>
-                  </div>
-                  <div class="button">Add To Cart+</div>
-                </div>
-              </div> -->
-            </div>
-          </div>
-          <div class="pagination">
-            <div class="custom-pagination"></div>
+      </div>
+      <div class="pagination">
+        <div class="custom-pagination"></div>
+      </div>
+    </div>
+  </div>
+</section>
+
+=============== Testimonials ===============
+<section class="section testimonials" id="testimonials">
+  <div class="row container">
+    <div class="col">
+      <div class="card" data-filter="rosele">
+        <div class="d-flex">
+          <div class="image"><img src="./images/profile-1.jpg" alt="" /></div>
+          <div>
+            <h4>Rosele Desoza</h4>
+            <span>Marketing Coordinator</span>
           </div>
         </div>
       </div>
-    </section>
-    <!--=============== Testimonials ===============-->
-    <section class="section testimonials" id="testimonials">
-      <div class="row container">
-        <div class="col">
-          <div class="card" data-filter="rosele">
-            <div class="d-flex">
-              <div class="image">
-                <img src="./images/profile-1.jpg" alt="" />
-              </div>
-              <div>
-                <h4>Rosele Desoza</h4>
-                <span>Marketing Coordinator</span>
-              </div>
-            </div>
-          </div>
-          <div class="card" data-filter="marvin">
-            <div class="d-flex">
-              <div class="image">
-                <img src="./images/profile-2.jpg" alt="" />
-              </div>
-              <div>
-                <h4>Marvin McKinney</h4>
-                <span>Web Designer</span>
-              </div>
-            </div>
-          </div>
-          <div class="card" data-filter="guy">
-            <div class="d-flex">
-              <div class="image">
-                <img src="./images/profile-3.jpg" alt="" />
-              </div>
-              <div>
-                <h4>Guy Hawkins</h4>
-                <span>President of Sales</span>
-              </div>
-            </div>
-          </div>
-          <div class="card" data-filter="kathryn">
-            <div class="d-flex">
-              <div class="image">
-                <img src="./images/profile-4.jpg" alt="" />
-              </div>
-              <div>
-                <h4>Kathryn Murphy</h4>
-                <span>Marketing Coordinator</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <h2>
-            What our Customers <br />
-            <span>are saying</span>
-          </h2>
-          <div class="test-wrapper">
-            <div class="testimonial active" data-id="rosele">
-              <div class="d-flex">
-                <div>
-                  <h4>Rosele Desoza</h4>
-                  <span>Marketing Coordinator</span>
-                </div>
-
-                <div class="rating">
-                  <span><i class="bx bxs-star"></i></span>
-                  <span><i class="bx bxs-star"></i></span>
-                  <span><i class="bx bxs-star"></i></span>
-                  <span><i class="bx bxs-star"></i></span>
-                  <span><i class="bx bxs-star"></i></span>
-                </div>
-              </div>
-
-              <p>
-                “Having good restaurant reviews is crucial these days. It is not
-                just making our decision to pick one easier, it is also helping
-                the restaurant be more successful. You can quickly copy and
-                paste these good restaurant review examples, publish them on
-                Facebook”
-              </p>
-            </div>
+      <div class="card" data-filter="marvin">
+        <div class="d-flex">
+          <div class="image"><img src="./images/profile-2.jpg" alt="" /></div>
+          <div>
+            <h4>Marvin McKinney</h4>
+            <span>Web Designer</span>
           </div>
         </div>
       </div>
-    </section>
-    <!--=============== App ===============-->
-    <section class="section app">
-      <div class="row container">
-        <div class="col">
-          <div class="circle">
-            <div class="inner-circle"></div>
-            <img src="./images/mobile.png" alt="" />
+      <div class="card" data-filter="guy">
+        <div class="d-flex">
+          <div class="image"><img src="./images/profile-3.jpg" alt="" /></div>
+          <div>
+            <h4>Guy Hawkins</h4>
+            <span>President of Sales</span>
           </div>
         </div>
-        <div class="col">
-          <h2>
-            Never Feel Hungry! Download Our Mobile App Order Delicious Food
-          </h2>
-          <p>
-            Online ordering has enabled many restaurants to manage their peak
-            business hours very effectively.
-          </p>
+      </div>
+      <div class="card" data-filter="kathryn">
+        <div class="d-flex">
+          <div class="image"><img src="./images/profile-4.jpg" alt="" /></div>
+          <div>
+            <h4>Kathryn Murphy</h4>
+            <span>Marketing Coordinator</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <h2>
+        What our Customers <br />
+        <span>are saying</span>
+      </h2>
+      <div class="test-wrapper">
+        <div class="testimonial active" data-id="rosele">
           <div class="d-flex">
-            <img src="./images/app-store.png" alt="" />
-            <img src="./images/google-play.png" alt="" />
+            <div>
+              <h4>Rosele Desoza</h4>
+              <span>Marketing Coordinator</span>
+            </div>
+            <div class="rating">
+              <span><i class="bx bxs-star"></i></span>
+              <span><i class="bx bxs-star"></i></span>
+              <span><i class="bx bxs-star"></i></span>
+              <span><i class="bx bxs-star"></i></span>
+              <span><i class="bx bxs-star"></i></span>
+            </div>
           </div>
+          <p>
+            “Having good restaurant reviews is crucial these days. It is not just making our decision to pick one easier, it is also helping the restaurant be more successful. You can quickly copy and paste these good restaurant review examples, publish them on Facebook”
+          </p>
         </div>
       </div>
-    </section>
+    </div>
+  </div>
+</section>
+
+=============== App Section ===============
+<section class="section app">
+  <div class="row container">
+    <div class="col">
+      <div class="circle">
+        <div class="inner-circle"></div>
+        <img src="./images/mobile.png" alt="" />
+      </div>
+    </div>
+    <div class="col">
+      <h2>
+        Never Feel Hungry! Download Our Mobile App Order Delicious Food
+      </h2>
+      <p>
+        Online ordering has enabled many restaurants to manage their peak business hours very effectively.
+      </p>
+      <div class="d-flex">
+        <img src="./images/app-store.png" alt="" />
+        <img src="./images/google-play.png" alt="" />
+      </div>
+    </div>
+  </div>
+</section>
+-->
+
     <!--=============== Footer ===============-->
     <footer class="footer">
       <div class="row container">
