--- a/Bharat Food/Front end/pages/about.html
+++ b/Bharat Food/Front end/pages/about.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us - Bharat Food</title>
-    <!-- Link to your CSS file -->
-    <link rel="stylesheet" href="../css/styles.css" />
-    <!-- Google Fonts already imported via CSS -->
-  </head>
-  <body class="about-page">
-    <!-- ========== Header & Navigation ========== -->
-    <header class="header">
-        <nav class="navbar">
-          <div class="row d-flex container">
-            <a href="../index.html" class="logo d-flex">
-              <img src="../images/BHARAT_FOOD LOGO.png" alt="Bharat Food Logo" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Explore Foods - Bharat Food</title>
+  <!-- Link to your main CSS file -->
+  <!-- Adjust the path as per your folder structure -->
+  <link rel="stylesheet" href="../css/styles.css" />
+  <!-- Boxicons CDN (for <i class="bx ..."> icons used in header/footer) -->
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+  <!-- If you need other icon libraries (font-awesome etc.), include here -->
+</head>
+<body>
+  <!--=============== Header ===============-->
+  <header class="header">
+    <nav class="navbar">
+      <div class="row d-flex container">
+        <a href="../index.html" class="logo d-flex">
+          <img src="../images/BHARAT_FOOD LOGO.png" alt="Bharat Food Logo" />
+        </a>
+
+        <ul class="nav-list d-flex">
+          <a href="../index.html">Home</a>
+          <a href="../pages/about.html">About</a>
+          <!-- Mark "Food" (Explore) as active -->
+          <a href="./explore_food.html" class="active">Food</a>
+          <a href="../pages/recepies.html">Recipes</a>
+          <a href="../pages/contact.html">Contact</a>
+          <span class="close d-flex"><i class="bx bx-x"></i></span>
+        </ul>
+
+        <div class="col d-flex">
+          <form action="#" method="GET">
+            <input type="search" placeholder="Search your item" name="q" />
+            <button type="submit" class="d-flex"><i class="bx bx-search"></i></button>
+          </form>
+          <div class="cart-icon d-flex">
+            <a href="../Front end/pages/cart.html">
+              <i class="bx bx-shopping-bag"></i>
+              <span>0</span>
             </a>
-      
-            <ul class="nav-list d-flex">
-              <a href="../index.html">Home</a>
-              <a href="about.html" class="active">About</a>
-              <a href="recipes.html">Recipes</a>
-              <a href="contact.html">Contact</a>
-              <span class="close d-flex"><i class="bx bx-x"></i></span>
-            </ul>
-        </nav>
-      </header>
+          </div>
+          <a href="../Front end/pages/signin.html" class="btn signin">Sign In</a>
+        </div>
+
+        <!-- Hamburger -->
+        <div class="hamburger d-flex">
+          <i class="bx bx-menu"></i>
+        </div>
+      </div>
+    </nav>
+  </header>
       
 
     <!-- ========== About Section ========== -->
@@ -69,45 +94,62 @@
       </div>
     </section>
 
-    <!-- ========== Footer ========== -->
+    <!--=============== Footer ===============-->
     <footer class="footer">
-      <div class="container">
-        <div class="row">
-          <!-- Footer Column 1 -->
-          <div class="col">
-            <div class="logo">
-              <img src="../images/BHARAT_FOOD LOGO.png" alt="Bharat Food Logo" />
-            </div>
-            <p>
-              Experience the authentic flavors of India with Bharat Food.
-            </p>
-            <div class="icons">
-              <a href="#" class="icon"><i class="fab fa-facebook-f"></i></a>
-              <a href="#" class="icon"><i class="fab fa-twitter"></i></a>
-              <a href="#" class="icon"><i class="fab fa-instagram"></i></a>
-            </div>
+      <div class="row container">
+        <div class="col">
+          <div class="logo d-flex">
+            <img src="../images/BHARAT_FOOD LOGO.png" alt="logo" />
           </div>
-          <!-- Footer Column 2 -->
-          <div class="col">
-            <div>
-              <h4>Quick Links</h4>
-              <a href="../index.html">Home</a>
-              <a href="about.html">About</a>
-              <a href="recipes.html">Recipes</a>
-              <a href="contact.html">Contact</a>
+          <p>
+            Retail food delivery is a courier service in which a restaurant,
+            store, or independent food-delivery
+          </p>
+          <div class="icons d-flex">
+            <div class="icon d-flex">
+              <i class="bx bxl-facebook"></i>
             </div>
+            <div class="icon d-flex"><i class="bx bxl-twitter"></i></div>
+            <div class="icon d-flex"><i class="bx bxl-linkedin"></i></div>
           </div>
         </div>
-      </div>
-      <div class="footer-bottom">
-        <div class="container">
-          <div class="row">
-            <p>&copy; 2025 Bharat Food. All rights reserved.</p>
-            <p>Designed by the Bharat Food Team</p>
+        <div class="col">
+          <div>
+            <h4>Company</h4>
+            <a href="../pages/about.html">About Us</a>
+            <a href="">Blog</a>
+            <a href="">All Products</a>
+            <a href="">Locations Map</a>
+          </div>
+          <div>
+            <h4>Services</h4>
+            <a href="">Order tracking</a>
+            <a href="">Wish List</a>
+            <a href="">My account</a>
+            <a href="">Terms & Conditions</a>
+          </div>
+          <div>
+            <h4>Support</h4>
+            <a href="">FAQ</a>
+            <a href="">Policy </a>
+            <a href="">Business</a>
+            <a href="">Support Carrer</a>
+          </div>
+          <div>
+            <h4>Contact</h4>
+            <a href="">WhatsApp</a>
+            <a href="">Support 24 </a>
+            <a href="">Quick Chat</a>
           </div>
         </div>
       </div>
     </footer>
+    <div class="footer-bottom">
+      <div class="row container d-flex">
+        <p>Copyright © 2025 Bharat Food</p>
+        <p>""</p>
+      </div>
+    </div>
 
     <!-- Optional: Font Awesome for social icons -->
     <script
